--- a/.github/workflows/fetch-aqi.yml
+++ b/.github/workflows/fetch-aqi.yml
@@ -30,8 +30,15 @@ jobs:
 
           echo "$result" | jq '.' > data/aqi.json
 
+      - name: Configure Git user
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+
+      - name: Pull latest changes
+        run: git pull origin main --rebase
+
       - name: Commit & push
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: "Update AQI data"
-
