--- a/.github/workflows/fetch-aqi.yml
+++ b/.github/workflows/fetch-aqi.yml
@@ -17,7 +17,7 @@ jobs:
 
       - name: Fetch AQI for cities
         env:
-          AQI_KEY: ${{ secrets.AQI_API_KEY }}
+          AQI_KEY: ${{ secrets.AQI_KEY }}
         run: |
           mkdir -p data
           cities=("delhi" "riyadh" "beijing" "tokyo" "newyork" "dhaka")
@@ -35,8 +35,10 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
-      - name: Pull latest changes
-        run: git pull origin main --rebase
+      - name: Sync with remote
+        run: |
+          git fetch origin main
+          git reset --hard origin/main
 
       - name: Commit & push
         uses: stefanzweifel/git-auto-commit-action@v4
