--- a/.github/workflows/fetch-aqi-ai.yml
+++ b/.github/workflows/fetch-aqi-ai.yml
@@ -2,7 +2,7 @@ name: Fetch AQI + AI Summaries
 
 on:
   schedule:
-    - cron: "0 * * * *"  # hourly
+    - cron: "0 * * * *"
   workflow_dispatch:
 
 jobs:
